k8s/namespace_production.yaml
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: iro-cicd-production
