k8s/deployment_development.yaml
---
  apiVersion: "extensions/v1beta1"
  kind: "Deployment"
  metadata: 
    name: "iro-email-microservice-development"
    namespace: "iro-cicd-development"
  spec: 
    selector: 
      matchLabels: 
        app: "iro-email-microservice-development"
    replicas: 1
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
    minReadySeconds: 5
    template: 
      metadata: 
        labels: 
          app: "iro-email-microservice-development"
      spec: 
        containers: 
          - 
            name: "iro-email-microservice-development"
            image: "gitlab-du.sterlitetech-software.com:5005/root/email-service:reusability"
            imagePullPolicy: "Always"
            ports: 
              - 
                containerPort: 43766
        imagePullSecrets: 
          - 
            name: "iro-email"
