k8s/deployment_production.yaml
---
  apiVersion: "extensions/v1beta1"
  kind: "Deployment"
  metadata:
    name: "iro-email-microservice-production"
    namespace: "iro-cicd-production"
  spec:
    selector:
      matchLabels:
        app: "iro-email-microservice-production"
    replicas: 1
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
    minReadySeconds: 5
    template:
      metadata:
        labels:
          app: "iro-email-microservice-production"
      spec:
        containers:
          -
            name: "iro-email-microservice-production"
            image: "docker.sterlite.com:5043/email-service:production-latest"
            imagePullPolicy: "Always"
            ports:
              -
                containerPort: 43766
        imagePullSecrets:
          -
            name: "stldocker"
