k8s/service_development.yaml
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "iro-email-microservice-development"
    namespace: "iro-cicd-development"
    labels: 
      app: "iro-email-microservice-development"
  spec: 
    ports: 
      - 
        port: 43766
        targetPort: 43766
    selector: 
      app: "iro-email-microservice-development"
