k8s/service_pre-prod.yaml
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "iro-upload-req-microservice-pre-prod"
    namespace: "iro-cicd-pre-prod"
    labels: 
      app: "iro-upload-req-microservice-pre-prod"
  spec: 
    ports: 
      - 
        port: 48622
        targetPort: 48622
    selector: 
      app: "iro-upload-req-microservice-pre-prod"
